--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@hapi/joi": "^17.1.1",
     "express": "^4.17.1",
     "lodash": "^4.17.15",
+    "mongoose": "^5.9.7",
     "nodemon": "^2.0.2"
   }
 }
